--- a/modbus-app/ui/DevicesConfiguration.ui
+++ b/modbus-app/ui/DevicesConfiguration.ui
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>DevicesConfiguration</class>
- <widget class="QWidget" name="DevicesConfiguration">
+ <widget class="QDialog" name="DevicesConfiguration">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>815</width>
-    <height>708</height>
+    <width>1024</width>
+    <height>768</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Dialog</string>
   </property>
   <widget class="QTableWidget" name="devicesWidget">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>40</y>
-     <width>411</width>
+     <x>30</x>
+     <y>20</y>
+     <width>641</width>
      <height>571</height>
     </rect>
    </property>
    <property name="columnCount">
     <number>3</number>
    </property>
+   <attribute name="horizontalHeaderCascadingSectionResizes">
+    <bool>false</bool>
+   </attribute>
+   <attribute name="horizontalHeaderMinimumSectionSize">
+    <number>150</number>
+   </attribute>
+   <attribute name="horizontalHeaderStretchLastSection">
+    <bool>true</bool>
+   </attribute>
    <attribute name="verticalHeaderVisible">
     <bool>false</bool>
    </attribute>
@@ -47,8 +56,8 @@
   <widget class="QPushButton" name="backButton">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>640</y>
+     <x>30</x>
+     <y>620</y>
      <width>141</width>
      <height>51</height>
     </rect>
@@ -60,8 +69,8 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>60</y>
+     <x>700</x>
+     <y>40</y>
      <width>251</width>
      <height>171</height>
     </rect>
@@ -81,19 +90,6 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="removeDeviceButton">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="text">
-       <string>Remove device</string>
-      </property>
-     </widget>
-    </item>
-    <item>
      <widget class="QPushButton" name="editDeviceButton">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
@@ -106,9 +102,68 @@
       </property>
      </widget>
     </item>
+    <item>
+     <widget class="QPushButton" name="removeDeviceButton">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>Remove device</string>
+      </property>
+     </widget>
+    </item>
    </layout>
+  </widget>
+  <widget class="QPushButton" name="applyButton">
+   <property name="geometry">
+    <rect>
+     <x>530</x>
+     <y>620</y>
+     <width>141</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Apply</string>
+   </property>
   </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>backButton</sender>
+   <signal>clicked()</signal>
+   <receiver>DevicesConfiguration</receiver>
+   <slot>reject()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>163</x>
+     <y>645</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>250</x>
+     <y>643</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>applyButton</sender>
+   <signal>clicked()</signal>
+   <receiver>DevicesConfiguration</receiver>
+   <slot>accept()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>627</x>
+     <y>658</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>780</x>
+     <y>634</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
