--- a/modbus-app/ui/DevicesConfiguration.ui
+++ b/modbus-app/ui/DevicesConfiguration.ui
@@ -22,11 +22,20 @@
      <height>571</height>
     </rect>
    </property>
+   <property name="selectionMode">
+    <enum>QAbstractItemView::SingleSelection</enum>
+   </property>
+   <property name="selectionBehavior">
+    <enum>QAbstractItemView::SelectRows</enum>
+   </property>
    <property name="columnCount">
     <number>3</number>
    </property>
    <attribute name="horizontalHeaderCascadingSectionResizes">
     <bool>false</bool>
+   </attribute>
+   <attribute name="horizontalHeaderDefaultSectionSize">
+    <number>230</number>
    </attribute>
    <attribute name="horizontalHeaderMinimumSectionSize">
     <number>150</number>
