implement tree model for devices
Signed-off-by: Matus Ujhelyi <ujhelyi.m@gmail.com>

--- a/modbus-app/ui/MainWindow.ui
+++ b/modbus-app/ui/MainWindow.ui
@@ -121,14 +121,10 @@
      </widget>
     </item>
     <item>
-     <widget class="QStackedWidget" name="stackedWidget">
-      <property name="frameShape">
-       <enum>QFrame::NoFrame</enum>
-      </property>
-      <property name="currentIndex">
-       <number>-1</number>
-      </property>
-     </widget>
+     <widget class="QTreeView" name="treeView"/>
+    </item>
+    <item>
+     <widget class="QColumnView" name="columnView"/>
     </item>
    </layout>
   </widget>
