--- a/modbus-app/ui/MainWindow.ui
+++ b/modbus-app/ui/MainWindow.ui
@@ -46,7 +46,7 @@
         <number>15</number>
        </property>
        <item>
-        <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,1,1,6">
+        <layout class="QVBoxLayout" name="verticalLayout" stretch="1,1,1,1,3">
          <property name="spacing">
           <number>15</number>
          </property>
@@ -98,7 +98,7 @@
             </sizepolicy>
            </property>
            <property name="text">
-            <string>Language and timezone</string>
+            <string>General Settings</string>
            </property>
           </widget>
          </item>
