--- a/modbus-app/ui/WifiSettings.ui
+++ b/modbus-app/ui/WifiSettings.ui
@@ -16,9 +16,9 @@
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
-     <x>110</x>
+     <x>90</x>
      <y>80</y>
-     <width>781</width>
+     <width>821</width>
      <height>361</height>
     </rect>
    </property>
@@ -34,10 +34,10 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>61</x>
       <y>180</y>
-      <width>112</width>
-      <height>16</height>
+      <width>151</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -50,7 +50,7 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>230</x>
       <y>100</y>
       <width>190</width>
       <height>40</height>
@@ -69,9 +69,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>480</x>
       <y>40</y>
-      <width>191</width>
+      <width>271</width>
       <height>51</height>
      </rect>
     </property>
@@ -80,6 +80,11 @@
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>Scan wireless networks</string>
@@ -93,7 +98,7 @@
      <rect>
       <x>60</x>
       <y>55</y>
-      <width>141</width>
+      <width>151</width>
       <height>21</height>
      </rect>
     </property>
@@ -104,7 +109,7 @@
    <widget class="QPushButton" name="okButton">
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>490</x>
       <y>300</y>
       <width>121</width>
       <height>41</height>
@@ -120,7 +125,7 @@
    <widget class="QPushButton" name="cancelButton">
     <property name="geometry">
      <rect>
-      <x>600</x>
+      <x>620</x>
       <y>300</y>
       <width>121</width>
       <height>41</height>
@@ -138,7 +143,7 @@
      <rect>
       <x>455</x>
       <y>100</y>
-      <width>271</width>
+      <width>331</width>
       <height>171</height>
      </rect>
     </property>
@@ -168,7 +173,7 @@
    <widget class="QCheckBox" name="wifiEnabledCheckBox">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>400</x>
       <y>50</y>
       <width>31</width>
       <height>31</height>
@@ -192,8 +197,8 @@
      <rect>
       <x>60</x>
       <y>110</y>
-      <width>101</width>
-      <height>16</height>
+      <width>141</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -206,7 +211,7 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>230</x>
       <y>169</y>
       <width>190</width>
       <height>40</height>
