implement icons and gps sensor
Signed-off-by: Matus Ujhelyi <ujhelyi.m@gmail.com>

--- a/modbus-app/resources/themes.qrc
+++ b/modbus-app/resources/themes.qrc
@@ -5,5 +5,25 @@
         <file>images/checkbox.png</file>
         <file>images/down_arrow.png</file>
         <file>images/handle.png</file>
+        <file>images/wifi.png</file>
+        <file>images/sensors.png</file>
+        <file>images/scan_wifi.png</file>
+        <file>images/pencil.png</file>
+        <file>images/devices.svg</file>
+        <file>images/pc_network.png</file>
+        <file>images/settings.png</file>
+        <file>images/ok.png</file>
+        <file>images/delete.png</file>
+        <file>images/cancel.png</file>
+        <file>images/add.png</file>
+        <file>images/wind_speed.png</file>
+        <file>images/wind_direction.png</file>
+        <file>images/temperature.png</file>
+        <file>images/settings_2.png</file>
+        <file>images/longitude.png</file>
+        <file>images/latitude.png</file>
+        <file>images/humidity.png</file>
+        <file>images/co2.png</file>
+        <file>images/atmosphere_pressure.png</file>
     </qresource>
 </RCC>
