--- a/modbus-app/ui/AddEditDevice.ui
+++ b/modbus-app/ui/AddEditDevice.ui
@@ -85,6 +85,9 @@
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
+    <property name="maximum">
+     <number>32768</number>
+    </property>
    </widget>
    <widget class="QComboBox" name="deviceTypeComboBox">
     <property name="geometry">
@@ -123,6 +126,16 @@
        <property name="text">
         <string>Ok</string>
        </property>
+       <property name="icon">
+        <iconset resource="../resources/themes.qrc">
+         <normaloff>:/images/ok.png</normaloff>:/images/ok.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
+       </property>
        <property name="autoDefault">
         <bool>false</bool>
        </property>
@@ -138,6 +151,16 @@
        </property>
        <property name="text">
         <string>Cancel</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../resources/themes.qrc">
+         <normaloff>:/images/cancel.png</normaloff>:/images/cancel.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
        </property>
        <property name="autoDefault">
         <bool>false</bool>
@@ -158,7 +181,9 @@
    </widget>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources/themes.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>pushButton_2</sender>
