--- a/modbus-app/ui/MainWindow.ui
+++ b/modbus-app/ui/MainWindow.ui
@@ -61,6 +61,16 @@
            <property name="text">
             <string>Devices</string>
            </property>
+           <property name="icon">
+            <iconset resource="../resources/themes.qrc">
+             <normaloff>:/images/sensors.png</normaloff>:/images/sensors.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
           </widget>
          </item>
          <item>
@@ -73,6 +83,16 @@
            </property>
            <property name="text">
             <string>Groups</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../resources/themes.qrc">
+             <normaloff>:/images/devices.svg</normaloff>:/images/devices.svg</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
            </property>
           </widget>
          </item>
@@ -87,6 +107,16 @@
            <property name="text">
             <string>Network settings</string>
            </property>
+           <property name="icon">
+            <iconset resource="../resources/themes.qrc">
+             <normaloff>:/images/wifi.png</normaloff>:/images/wifi.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
           </widget>
          </item>
          <item>
@@ -99,6 +129,16 @@
            </property>
            <property name="text">
             <string>General Settings</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../resources/themes.qrc">
+             <normaloff>:/images/settings_2.png</normaloff>:/images/settings_2.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
            </property>
           </widget>
          </item>
@@ -162,6 +202,8 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources/themes.qrc"/>
+ </resources>
  <connections/>
 </ui>
