--- a/modbus-app/ui/Settings.ui
+++ b/modbus-app/ui/Settings.ui
@@ -66,6 +66,16 @@
     <property name="text">
      <string>cancel</string>
     </property>
+    <property name="icon">
+     <iconset resource="../resources/themes.qrc">
+      <normaloff>:/images/cancel.png</normaloff>:/images/cancel.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>32</width>
+      <height>32</height>
+     </size>
+    </property>
    </widget>
    <widget class="QPushButton" name="okButton">
     <property name="geometry">
@@ -78,6 +88,16 @@
     </property>
     <property name="text">
      <string>ok</string>
+    </property>
+    <property name="icon">
+     <iconset resource="../resources/themes.qrc">
+      <normaloff>:/images/ok.png</normaloff>:/images/ok.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>32</width>
+      <height>32</height>
+     </size>
     </property>
    </widget>
    <widget class="QWidget" name="gridLayoutWidget">
@@ -176,6 +196,8 @@
    </widget>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources/themes.qrc"/>
+ </resources>
  <connections/>
 </ui>
