--- a/modbus-app/ui/WifiSettings.ui
+++ b/modbus-app/ui/WifiSettings.ui
@@ -89,6 +89,16 @@
     <property name="text">
      <string>Scan wireless networks</string>
     </property>
+    <property name="icon">
+     <iconset resource="../resources/themes.qrc">
+      <normaloff>:/images/scan_wifi.png</normaloff>:/images/scan_wifi.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>32</width>
+      <height>32</height>
+     </size>
+    </property>
     <property name="autoDefault">
      <bool>false</bool>
     </property>
@@ -118,6 +128,16 @@
     <property name="text">
      <string>ok</string>
     </property>
+    <property name="icon">
+     <iconset resource="../resources/themes.qrc">
+      <normaloff>:/images/ok.png</normaloff>:/images/ok.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>32</width>
+      <height>32</height>
+     </size>
+    </property>
     <property name="autoDefault">
      <bool>false</bool>
     </property>
@@ -133,6 +153,16 @@
     </property>
     <property name="text">
      <string>cancel</string>
+    </property>
+    <property name="icon">
+     <iconset resource="../resources/themes.qrc">
+      <normaloff>:/images/cancel.png</normaloff>:/images/cancel.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>32</width>
+      <height>32</height>
+     </size>
     </property>
     <property name="autoDefault">
      <bool>false</bool>
@@ -185,12 +215,6 @@
     <property name="text">
      <string/>
     </property>
-    <property name="iconSize">
-     <size>
-      <width>32</width>
-      <height>32</height>
-     </size>
-    </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
@@ -226,6 +250,8 @@
    </widget>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources/themes.qrc"/>
+ </resources>
  <connections/>
 </ui>
