--- a/modbus-app/resources/dark-orange.qss
+++ b/modbus-app/resources/dark-orange.qss
@@ -14,11 +14,13 @@ QWidget
     font-size: 14px;
 }
 
+/*
 QWidget:item:hover
 {
     background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #ca0619);
     color: #000000;
 }
+*/
 
 QWidget:item:selected
 {
