--- a/modbus-app/ui/Settings.ui
+++ b/modbus-app/ui/Settings.ui
@@ -35,7 +35,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>250</y>
+      <y>190</y>
       <width>211</width>
       <height>16</height>
      </rect>
@@ -48,7 +48,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>280</y>
+      <y>220</y>
       <width>541</width>
       <height>31</height>
      </rect>
@@ -58,7 +58,7 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>340</y>
+      <y>380</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -81,7 +81,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>340</y>
+      <y>380</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -104,12 +104,12 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>60</y>
+      <y>30</y>
       <width>541</width>
-      <height>151</height>
+      <height>131</height>
      </rect>
     </property>
-    <layout class="QGridLayout" name="gridLayout" rowstretch="3,0,3">
+    <layout class="QGridLayout" name="gridLayout" rowstretch="3,1,3">
      <item row="2" column="0">
       <widget class="QLabel" name="languageSelectionLabel">
        <property name="text">
@@ -193,6 +193,32 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>270</y>
+      <width>211</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Device name:</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="deviceNameEdit">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>300</y>
+      <width>541</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
    </widget>
   </widget>
  </widget>
