--- a/modbus-app/ui/DevicesConfiguration.ui
+++ b/modbus-app/ui/DevicesConfiguration.ui
@@ -38,13 +38,13 @@
     <number>3</number>
    </property>
    <attribute name="horizontalHeaderCascadingSectionResizes">
-    <bool>true</bool>
+    <bool>false</bool>
    </attribute>
    <attribute name="horizontalHeaderDefaultSectionSize">
     <number>212</number>
    </attribute>
    <attribute name="horizontalHeaderMinimumSectionSize">
-    <number>212</number>
+    <number>50</number>
    </attribute>
    <attribute name="horizontalHeaderStretchLastSection">
     <bool>true</bool>
@@ -65,12 +65,12 @@
    </column>
    <column>
     <property name="text">
-     <string>Device type</string>
+     <string>Type</string>
     </property>
    </column>
    <column>
     <property name="text">
-     <string>Device address</string>
+     <string>Address</string>
     </property>
    </column>
   </widget>
